fixed spacing issue in mobile

--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,7 @@ code {
   background-color: rgb(0, 68, 0);
   align-items: center;
   justify-self: center;
-  margin-top: 8rem;
+  margin-top: 6rem;
 }
 
 @media only screen and (max-width: 768px) {
